--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Archive application zip file
         uses: actions/upload-artifact@v4
         with:
-          name: application
+          name: engine_manager
           path: "engine_manager.zip"
       - uses: ncipollo/release-action@v1
         with:
