Don't update release text on re-release.

--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -39,3 +39,4 @@ jobs:
           body: "Download, unzip and run `Pectus Engine Manager.exe`."
           allowUpdates: true
           makeLatest: true
+          omitBodyDuringUpdate: true
