--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -19,24 +19,18 @@ jobs:
         with:
           python-version: "3.13"
       - name: Install dependencies
-        run: python -m pip install --upgrade pip pyinstaller pyright
+        run: python -m pip install --upgrade pip
       - name: Install Open Pectus Engine Manager
-        run: pip install -e .
+        run: pip install -e ".[development]"
       - name: Type check with pyright
         run: pyright
       - name: Test with unittest
         run: python -m unittest
       - name: Build .exe
-        run: pyinstaller pyinstaller.spec
-      - name: Zip application
         run: |
+          pyinstaller pyinstaller.spec
           cd dist
           move "Open Pectus Engine Manager.exe" ../
-      - name: Archive application
-        uses: actions/upload-artifact@v4
-        with:
-          name: engine_manager
-          path: "Open Pectus Engine Manager.exe"
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "Open Pectus Engine Manager.exe"
@@ -45,3 +39,5 @@ jobs:
           allowUpdates: true
           makeLatest: true
           omitBodyDuringUpdate: true
+          removeArtifacts: true
+          replacesArtifacts: true
